# task_manager

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  task_management.db  test_task_management.db
alembic/: env.py
app/: __init__.py  config.py  conftest.py  database.py  dependencies.py  exceptions.py  exeptions.py  logger.py  main.py  task_management.db
app/alembic/: __init__.py  env.py
app/alembic/versions/: 27006133b668_rename.py  5a5d78954c4e_initial_migrations.py
app/auth/: __init__.py  jwt_auth.py  token_schemas.py  utils.py
app/models/: __init__.py  tasks_models.py  users_models.py
app/repository/: __init__.py  base_repository.py  tasks_repository.py  user_repository.py
app/router/: Health_check_router.py  __init__.py  tasks_router.py  user_router.py
app/schemas/: __init__.py  tasks_schemas.py  user_schemas.py
app/tests/: __init__.py  conftest.py  mock_tasks.json  mock_users.json  test_api.py  test_auth.py
app/tests/test_api/: __init__.py  test_api_tasks.py  test_api_users.py
app/tests/test_repository/: __init__.py  test_tasks_repository.py  test_users_repository.py
certs/: jwt-private.txt  jwt-public.txt
core/: config.py
tests/: test_api.py
