[project]
name = "TaskManagment"
version = "0.1.0"
description = ""
authors = [
    {name = "Ruslan Kozlovsky"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.12.6"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pytest[pytest-asyncio] (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pytest-dotenv (>=0.5.2,<0.6.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "isort (>=6.0.1,<7.0.0)",
    "docformatter (>=1.7.7,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip_gitignore = true